# SelfPilot

./: .gitignore  README.md  index.html  package-lock.json  package.json  tech-stack-detail.md  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.mts  自学计划任务规划桌面应用_PRD.md  自学计划任务规划桌面应用_分阶段交付计划.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_encouragement_settings.sql  003_encouragement_level.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  encouragement.rs  goal.rs  mod.rs  progress.rs  settings.rs  stage.rs  stats.rs  task.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/services/: mod.rs  progress_service.rs  split_service.rs
src/api/: backup.ts  encouragement.ts  goal.ts  progress.ts  settings.ts  stage.ts  stats.ts  task.ts
src/components/: ProgressRing.vue  TaskItem.vue
src/constants/: encouragements.ts
src/stores/: encouragementStore.ts  goalStore.ts  settingStore.ts  taskStore.ts
src/types/: index.ts
src/views/: CalendarView.vue  DashboardView.vue  EncouragementView.vue  GoalTreeView.vue  SettingsView.vue  StatsView.vue
