[package]
name = "self-study-planner"
version = "0.1.0"
edition = "2021"
description = "SelfPilot 自学计划任务规划桌面应用"

[lib]
name = "self_study_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
